# Road-Accident-Severity-App

./: README.md  pyproject.toml
road_accident_severity_app/: .gitignore  db.sqlite3  manage.py
road_accident_severity_app/app/: urls.py  views.py
road_accident_severity_app/app/templates/: add_data.html  data_collection.html  data_modification.html  eda.html  guidelines.html  home.html  list_data.html  login.html  model_results.html  modify_data.html  prediction.html  register.html  visualization.html
road_accident_severity_app/app/templatetags/: custom_filters.py
road_accident_severity_app/db/: connect.py
road_accident_severity_app/middleware/: auth.py
road_accident_severity_app/road_accident_severity_app/: asgi.py  settings.py  urls.py  wsgi.py
road_accident_severity_app/utils/: auth.py
