[tool.poetry]
name = "road-accident-severity-app"
version = "0.1.0"
description = ""
authors = ["Bhuvan Thirwani <bhuvanthirwani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "^5.1.4"
pymongo = "^4.10.1"
dnspython = "^2.7.0"
tailwindcss = "^0.0.1"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"
python-dotenv = "^1.0.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
