[tool.poetry]
name = "road-accident-severity-app"
version = "0.1.0"
description = ""
authors = ["Bhuvan Thirwani <bhuvanthirwani@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
django = "3.1.12"
djongo = "^1.3.6"
pymongo = "^3.11.4"
dnspython = "^2.7.0"
tailwindcss = "^0.0.1"
numpy = "^2.1.3"
pandas = "^2.2.3"
scikit-learn = "^1.5.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
